kube/platform/grafana-stack/base/grafana-agent-operator.gen.yaml
---
# Source: grafana-agent-operator/templates/operator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-agent-operator
  labels:
    app.kubernetes.io/name: grafana-agent-operator
    app.kubernetes.io/instance: grafana-agent-operator
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: operator
    helm.sh/chart: grafana-agent-operator-0.2.8
    app.kubernetes.io/version: "0.28.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-agent-operator
      app.kubernetes.io/instance: grafana-agent-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana-agent-operator
        app.kubernetes.io/instance: grafana-agent-operator
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: grafana-agent-operator
      containers:
      - name: grafana-agent-operator
        image: "docker.io/grafana/agent-operator:v0.28.0"
        imagePullPolicy: IfNotPresent
        args:
          - --kubelet-service=default/kubelet
